# vimbrute

./: Cargo.toml  LICENSE  README.md  rust.yml
.github/workflows/: release.yml  test.yml
data/: file1.vimcrypt  file2.plain  file2.vimcrypt  password
data/file1/: encrypted.txt
src/: cli.rs  crypto.rs  lib.rs  main.rs
